Refactor URL handling in ProxyHandler and HealthChecker classes to use URI for improved robustness. Update Main class to retrieve the first server from the configuration using getFirst() method and ensure serverSocket is closed after request processing.